-
Bug
-
Resolution: Fixed
-
P3
-
13
-
b22
-
sparc
-
solaris
-
Verified
runtime/7158800/InternTest.java timed out in CI jdk13-jdk-764, tier3, solaris-sparcv9
Error. Program `/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk13-jdk.764/solaris-sparcv9-debug.jdk/jdk-13/fastdebug/bin/java' timed out (timeout set to 960000ms, elapsed time including timeout handling was 984799ms)
Error. Program `/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk13-jdk.764/solaris-sparcv9-debug.jdk/jdk-13/fastdebug/bin/java' timed out (timeout set to 960000ms, elapsed time including timeout handling was 984799ms)
- relates to
-
JDK-8241464 [11u] Backport: make rehashing be a needed guaranteed safepoint cleanup action
-
- Resolved
-