8221967: InternTest.java timed out

Move redundant table lookup and make rehashing be a needed guaranteed safepoint cleanup action.

Reviewed-by: dholmes, rehn